--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,83 @@
-
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
+contourpy==1.3.0
+cycler==0.12.1
+decorator==5.2.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.13.1
+fonttools==4.57.0
+fsspec==2024.6.1
+future==1.0.0
+idna==3.4
+imageio==2.37.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.7
+lazy_loader==0.4
+MarkupSafe==2.1.5
+matplotlib==3.9.4
+matplotlib-inline==0.1.7
+mistune==3.1.3
+mpmath==1.3.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+networkx==3.2.1
+nibabel==5.3.2
+numpy==1.26.3
+packaging==25.0
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==11.0.0
+pipreqs==0.5.0
+platformdirs==4.3.7
+prompt_toolkit==3.0.51
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pyparsing==3.2.3
+pystrum==0.4
+python-dateutil==2.9.0.post0
+pyzmq==26.4.0
+referencing==0.36.2
+requests==2.28.1
+rpds-py==0.24.0
+scikit-image==0.24.0
+scipy==1.13.1
+six==1.17.0
+soupsieve==2.7
+stack-data==0.6.3
+sympy==1.13.3
+threadpoolctl==3.6.0
+tifffile==2024.8.30
+tinycss2==1.4.0
+torch==2.1.0+cu118
+torchaudio==2.1.0+cu118
+torchvision==0.16.0+cu118
+tornado==6.4.2
+traitlets==5.14.3
+triton==2.1.0
+typing_extensions==4.12.2
+urllib3==1.26.13
+wcwidth==0.2.13
+webencodings==0.5.1
+yarg==0.1.9
+zipp==3.21.0
